[package]
name = "s3_uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
tokio-util = { version = "0.7.10", features = ["full"] }
crypto = { version = "0.5.1", features = ["digest"] }
futures = "0.3.30"
actix-web = "4.4.1"
sha2 = "0.10.8"
anyhow = "1.0.79"
ping = "0.5.1"
log = "0.4.20"
env_logger = "0.11.1"

[build-dependencies]
tokio = { version = "1.36.0", features = ["full"] }
